- pngwolf - http://bjoern.hoehrmann.de/pngwolf
- rehuff - http://wiki.xiph.org/Rehuff
- tidy-html5 c63cc39 - http://www.paehl.com/open_source/?HTML_Tidy_for_HTML5
- TruePNG 0.5.0.4 - http://x128.ho.ua/pngutils.html
- ZLib 1.2.8 - http://www.zlib.net
- zRecompress 2.12 - http://nikkhokkho.sourceforge.net/static.php?page=zRecompress


XX - YYYY
- Revert to ghostcript 9.15 since Ghostcript 9.16 crashes with errorlevel 0 (everything OK), when source file name has extended characters. It worked properly on 9.15.


7.40 - 2015/04/10
- We are now checking returned errorlevels from plugins to avoid corruption such as in password protected PDF (sambufalo).
- Fixed removal of range selection of files (Dmitry).
- Make sure temporary filenames have no collisions even if original files are named the same across different folders (Dmitry).
- Updated Leanify 0.4.2.43 daily binaries.
- Updated APNG Optimizer to 1.4.
- Upgraded to Ghostcript 9.16.
- Upgraded distributions to 7-Zip 15.00.
- Some minor optimizations and code cleanup.
- Upgraded to C++ Builder XE8.


7.30 - 2015/03/15
- Default optimization level is now 5: Normal, instead of 9: Best.
- Fixed wrong percent calculation (Dmitry, Spotted Cow).
- Updated PETrim to 4.00 Beta.
- Minor optimizations.

7.20 - 2015/03/13
- FileOptimizer is now able to partially detect file types by its contents instead of file extensions (BMP, DLL, FLAC, GIF, GZ, JPG, MKV, MP3, MP4, PCX, PDF, PNG, SWF, TIFF, WEBP, and ZIP). More to come later.
- Added custom PDF profile to allow specifying desired downsampling DPI (stratos chatzi, Special, Newtomic).
- Added new column extension between file and original on the grid to allow sorting by filetypes (Nico919).
- Added INI option BeepWhenDone=false to beep and notify used when optimization is complete (Special).